测试使用activity的token设置dialog参数后弹出

--- a/client/src/main/res/layout/actvity_aidl_test.xml
+++ b/client/src/main/res/layout/actvity_aidl_test.xml
@@ -51,4 +51,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="showTest()"></Button>
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="调研token与dialog token"
+        android:onClick="testToken"></Button>
 </LinearLayout>
